--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.13.0",
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-webview": "^10.8.2",
     "react-navigation": "^4.4.0",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-stack": "^2.8.2",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
